Fix double session-restore bug.

Currently on a post-crash startup with the --restore-last-session flag specified an automatic session restore occurs, and an infobar offering an additional session restore is created. Clicking "restore" on the infobar results in the session being restored twice.

This CL removes the logic that makes the flag automatically restore the session post-crash. This diminishes the power of the flag somewhat, but allows it to continue working in support of OS-specific "continue where you left of" functionality on Windows and OS X.

BUG=707998

Review-Url: https://codereview.chromium.org/2832503002
Cr-Commit-Position: refs/heads/master@{#465665}

Former-commit-id: 92f8ca3fa43fbe22f303afc4c464924dccd1ccbe